--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-datepicker": "^1.7.2",
+    "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-paper": "^5.2.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "~0.18.9"
